@@ -1,7 +1,7 @@
-/* $Id: hash.c,v 1.4 2001/12/10 17:02:44 ukai Exp $ */
+/* $Id: hash.c,v 1.5 2003/04/07 16:27:10 ukai Exp $ */
 #include <string.h>
 #include "hash.h"
-#include "gc.h"
+#include <gc.h>
 
 static unsigned int
 hashfunc(char *s)
